--- a/components/menu/index.html
+++ b/components/menu/index.html
@@ -115,7 +115,7 @@
                     <div class="fourth-dish">
                         <img src="../../img/menu/tika-masala.jpg" alt="tika-masala">
                         <div>
-                            <h3>Chicken Tika Masala</h3>
+                            <h3>Tikka Masala</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mollis eleifend dapibus.
                             </p>
@@ -161,9 +161,9 @@
                         <span>$14</span>
                     </div>
                     <div class="fourth-dish">
-                        <img src="../../img/menu/bologhnese.jpg" alt="bologhnese">
+                        <img src="../../img/menu/cheeseburger.jpg" alt="cheeseburger">
                         <div>
-                            <h3>Spaghetti Bolognese</h3>
+                            <h3>Cheeseburger</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mollis eleifend dapibus.
                             </p>
