--- a/components/blog/responsive.css
+++ b/components/blog/responsive.css
@@ -69,3 +69,10 @@
         font-size: 17px;
     }
   }
+
+  /* Landscape */
+@media (orientation: landscape) {
+    main{
+        height: auto;
+    }
+}
