--- a/components/menu/responsive.css
+++ b/components/menu/responsive.css
@@ -77,3 +77,11 @@
         margin-bottom: 20px;
     }
   }
+
+  /* Landscape */
+@media (orientation: landscape) {
+    .first-row, .second-row{
+        display: flex;
+        flex-direction: row;
+    }
+}
