--- a/components/blog/responsive.css
+++ b/components/blog/responsive.css
@@ -71,7 +71,7 @@
   }
 
   /* Landscape */
-@media (orientation: landscape) {
+  @media only screen and (max-width: 900px) and (orientation: landscape) {
     main{
         height: auto;
     }
