--- a/components/contact-us/responsive.css
+++ b/components/contact-us/responsive.css
@@ -85,7 +85,7 @@
   }
 
   /* Landscape */
-@media (orientation: landscape) {
+  @media only screen and (max-width: 900px) and (orientation: landscape) {
     main{
         height: 75vh;
     }
