--- a/components/menu/responsive.css
+++ b/components/menu/responsive.css
@@ -79,7 +79,7 @@
   }
 
   /* Landscape */
-@media (orientation: landscape) {
+  @media only screen and (max-width: 900px) and (orientation: landscape) {
     .first-row, .second-row{
         display: flex;
         flex-direction: row;
